space btn links

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
                         <div class="col-md-6 section-title text-right">
 
                             <a href="">
-                                About
+                                About &nbsp; &nbsp;
                             </a>
                             <a href="">
-                                Projects
+                                Projects &nbsp; &nbsp;
                             </a>
                             <a href="">
-                                Blog
+                                Blog &nbsp; &nbsp;
                             </a>
                             <a href="">
-                                News
+                                News &nbsp; &nbsp;
                             </a>
                             <a href="">
-                                Contact
+                                Contact &nbsp; &nbsp;
                             </a>
                             <a 
                             <a href="tel:+255767351547" class="phone-number">+255 767 351 547</a> &nbsp; &nbsp;
