--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                       aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse mr-auto text-right" id="collapsibleNavId">
-                      <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+                  <div class="collapse navbar-collapse" id="collapsibleNavId">
+                      <ul class="navbar-nav me-auto mt-2 mt-lg-0 ml-auto text-right">
                           <li class="nav-item">
                               <a class="nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
                           </li>
