--- a/index.html
+++ b/index.html
@@ -54,15 +54,21 @@
                               <a class="nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link" href="#">Link</a>
+                              <a class="nav-link" href="#">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Projects</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Blog</a>
                           </li>
-                          <li class="nav-item dropdown">
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">News</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                          </li>
+                        <li class="nav-item dropdown">
                               <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                               <div class="dropdown-menu" aria-labelledby="dropdownId">
                                   <a class="dropdown-item" href="#">Action 1</a>
