--- a/index.html
+++ b/index.html
@@ -68,6 +68,23 @@
                           <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                           </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-twitter social-link-icon"></i>
+                            </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-facebook social-link-icon"></i>
+                            </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                          </li>
+
                         <li class="nav-item dropdown">
                               <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                               <div class="dropdown-menu" aria-labelledby="dropdownId">
