--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                             </a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-instagram social-link-icon"></i>
+                            </a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
