--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <a class="nav-link" href="#">Contact</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="http://twitter.com/" class="social">
                                 <i class="bi bi-twitter social-link-icon"></i>
                             </a>
                           </li>
@@ -100,15 +100,15 @@
           </nav>
           
 
-            <section>
+            <!-- <section>
                 <div class="container">
                     <div class="row">
                         <div class="">
   
                             </a>
-                        </div>
+                        </div> -->
                         
-                        <div class="section-title text-right ml-auto">
+                        <!-- <div class="section-title text-right ml-auto">
 
                             <a href="">
                                 About 
@@ -146,10 +146,10 @@
                             <a href="https://www.youtube.com/" class="social">
                                 <i class="bi bi-youtube social-link-icon"></i>
                             </a>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div>
                 </div>
-            </section>
+            </section> -->
 
             <div class="container">
                 <hr>
