--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="https://www.facebook.com/" class="social">
                                 <i class="bi bi-facebook social-link-icon"></i>
                             </a>
                           </li>
