--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="https://www.instagram.com/" class="social">
                                 <i class="bi bi-instagram social-link-icon"></i>
                             </a>
                           </li>
