--- a/index.html
+++ b/index.html
@@ -83,17 +83,14 @@
                                 <i class="bi bi-instagram social-link-icon"></i>
                             </a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                          </li>
-
-                        <li class="nav-item dropdown">
+                          
+                        <!-- <li class="nav-item dropdown">
                               <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                               <div class="dropdown-menu" aria-labelledby="dropdownId">
                                   <a class="dropdown-item" href="#">Action 1</a>
                                   <a class="dropdown-item" href="#">Action 2</a>
                               </div>
-                          </li>
+                          </li> -->
                       </ul>
                   </div>
             </div>
@@ -157,8 +154,9 @@
             </div>
 
 
+            
+        <section class="top-homepage">
             <div class="container">
-            <section class="top-homepage">
                 <div class="page-top pb-3">
                     <h4 class="section-title">Rondo Women's Development Organization</h4>
                     <span class="page-subtitle" id="small-title">
@@ -166,7 +164,8 @@
                         &nbsp;> &nbsp;Home
                     </span>
                 </div>
-            </section>
+            </div>
+        </section>
 
 
             <!-- page contents -->
@@ -188,7 +187,8 @@
                         </div>
                     </p>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <hr>
 
@@ -223,6 +223,7 @@
                             </div>
                         </div>
                     </p>
+                </div>
                 </section>
 
 
@@ -272,16 +273,8 @@
 
                     </div>
                 </div>
-                <!-- <ul class="list-unstyled">
-                    <li class="news">
-                        <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur ratione repellat in omnis. Deleniti dicta rerum sint magnam ipsam iste officia temporibus! Sunt nam itaque temporibus natus impedit a! </a>
-                        <br>
-                        <span class="news-info">
-                            <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
-                        </span>
-                    </li>
-                </ul> -->
-            </section>
+            </div>
+        </section>
 
 
             <section class="partners pt-3 pb-3">
