--- a/index.html
+++ b/index.html
@@ -228,11 +228,10 @@
 
 
                 <!-- News section -->
-                <section class="news pt-4 pb-3">
-                <h5 class="section-title text-center"> News </h5>
-                <h5 class="sub-sections-header pb-2">Recent Causes</h5>
-
-                <div class="">
+            <section class="news pt-4 pb-3">
+                <div class="container">
+                    <h5 class="section-title text-center"> News </h5>
+                    <h5 class="sub-sections-header pb-2">Recent Causes</h5>
                     <div class="row">
                         <div class="col-md-4 col-sm-12 col-xs-12">
                             <div class="card">
