--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
             <hr>
 
 
-                <section class="top-part pt-4 pb-3">
+            <section class="top-part pt-4 pb-3">
+                <div class="container">
                     <h5 class="section-title text-center">How You Can Help</h5>
                     <p>
                         <div class="row">
@@ -224,10 +225,10 @@
                         </div>
                     </p>
                 </div>
-                </section>
+            </section>
 
 
-                <!-- News section -->
+            <!-- News section -->
             <section class="news pt-4 pb-3">
                 <div class="container">
                     <h5 class="section-title text-center"> News </h5>
