--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
         </section>
 
 
-            <!-- page contents -->
-            <section class="top-part pt-3 pb-3">
+        <!-- page contents -->
+        <section class="top-part pt-3 pb-3">
+            <div class="container">
                 <div class="row">
                     <p>
                         <div class="col-md-6">
