paddings top btm

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
         <!-- page contents -->
-        <section class="top-part pt-3 pb-3">
+        <section class="top-part pt-3 pb-4">
             <div class="container">
                 <div class="row">
                     <p>
@@ -191,10 +191,10 @@
             </div>
         </section>
 
-            <hr>
+            
 
 
-            <section class="top-part pt-4 pb-3">
+            <section class="top-part pt-4 pb-4">
                 <div class="container">
                     <h5 class="section-title text-center">How You Can Help</h5>
                     <p>
@@ -230,7 +230,7 @@
 
 
             <!-- News section -->
-            <section class="news pt-4 pb-3">
+            <section class="news pt-4 pb-4">
                 <div class="container">
                     <h5 class="section-title text-center"> News </h5>
                     <h5 class="sub-sections-header pb-2">Recent Causes</h5>
@@ -278,7 +278,8 @@
         </section>
 
 
-            <section class="partners pt-3 pb-3">
+        <div class="partners pt-3 pb-3">
+            <div class="container"></div>
                 <h5 class="section-title text-center">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
                 <div class="container">
@@ -300,8 +301,9 @@
                     </div>
                 </div>
             </div>
-            </section>
         </div>
+        </section>
+        
         </main>
 
         <footer>
