well organised page

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
             </div>
 
-
+        <main>
             
         <section class="top-homepage">
             <div class="container">
@@ -278,8 +278,8 @@
         </section>
 
 
-        <div class="partners pt-4 pb-4">
-            <div class="container"></div>
+        <div class="partners pt-4 pb-4 mb-3">
+            <div class="container">
                 <h5 class="section-title text-center">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
                 <div class="container">
@@ -307,7 +307,7 @@
         </main>
 
         <footer>
-            <div class="container pt-5 pb-4">
+            <div class="container pt-5">
                 <div class="row">
                     <div class="col-md-8">
                         <h5>Address</h5>
