--- a/index.html
+++ b/index.html
@@ -118,10 +118,15 @@
                                 Donate
                             </button>
                         </div>
-                        <div class="col-md-2"></div>
+                       
+                        <div class="col-md-3 col-sm-12 order-sm-first order-xs-first order-md-last pb-sm-3 pb-xs-3 d-lg-none d-md-none">
+                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid float-end">
+                        </div>
                         <div class="col-md-4 col-sm-12 order-sm-first order-xs-first order-md-last pb-sm-3 pb-xs-3 d-lg-none d-md-none">
                             <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid float-end">
                         </div>
+                        
+
                     </p>
                 </div>
             </div>
