--- a/index.html
+++ b/index.html
@@ -109,26 +109,27 @@
             <div class="container">
                 <div class="row">
                     <p>
-                        <div class="col-md-6">
+                        <div class="">
                             <h5 class="section-title">Raise Your Helping Hand</h5>
                             <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
                             <br>
                             <br>
-                            <button class="btn btn-outline-success" id="donate-btn">
-                                Donate
-                            </button>
                         </div>
-                       
-                        <div class="col-md-3 col-sm-12 order-sm-first order-xs-first order-md-last pb-sm-3 pb-xs-3 d-lg-none d-md-none">
-                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid float-end">
-                        </div>
-                        <div class="col-md-4 col-sm-12 order-sm-first order-xs-first order-md-last pb-sm-3 pb-xs-3 d-lg-none d-md-none">
-                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid float-end">
-                        </div>
-                        
-
                     </p>
                 </div>
+                <div class="row">
+                        <div class="col-md-6 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
+                            <img src="./res/images/imgs/all-members.jpg" alt="" id="all-image" class="rounded img-fluid float-end">
+                        </div>
+                        <div class="col-md-6 col-sm-12 order-xs-first">
+                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid">
+                        </div>
+                    </p>
+                </div>
+
+                <button class="btn btn-outline-success" id="donate-btn">
+                    Donate
+                </button>
             </div>
         </section>
 
