--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse ml-auto" id="collapsibleNavId">
-                      <ul class="navbar-nav me-auto mt-2 mt-lg-0 ml-auto text-right">
+                      <ul class="navbar-nav ms-auto mt-2 mt-lg-0 text-end">
                           <li class="nav-item">
                               <a class="nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
                           </li>
