--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <body>
         
-            <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-light">
                 <div class="container">
                   <a class="navbar-brand" href="http://www.rowodo.or.tz">
                     <img src="./res/images/logo/rowodo-logo.png" alt="rowodo-logo" class="main-logo">
@@ -119,10 +119,10 @@
                 </div>
                 <div class="row">
                         <div class="col-md-6 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
-                            <img src="./res/images/imgs/all-members.jpg" alt="" id="all-image" class="rounded img-fluid float-end">
+                            <img src="./res/images/imgs/members.png" alt="" id="all-image" class="rounded img-fluid float-end">
                         </div>
                         <div class="col-md-6 col-sm-12 order-xs-first">
-                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid">
+                            <img src="./res/images/imgs/women.png" alt="" id="women-image" class="rounded img-fluid">
                         </div>
                     </p>
                 </div>
