--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <body>
         
-            <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-light">
+            <nav class="navbar navbar-expand-sm sticky-top">
                 <div class="container">
                   <a class="navbar-brand" href="http://www.rowodo.or.tz">
                     <img src="./res/images/logo/rowodo-logo.png" alt="rowodo-logo" class="main-logo">
