--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     </a>
                     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                         aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <!-- <span class="navbar-toggler-icon"></span> -->
+                        <i class="bi bi-stack"></i>
                     </button>
                     <div class="collapse navbar-collapse ml-auto" id="collapsibleNavId">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0 text-end">
@@ -67,21 +68,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="http://twitter.com/" class="social">
-                                    <i class="bi bi-twitter social-link-icon"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="https://www.facebook.com/" class="social">
-                                <i class="bi bi-facebook social-link-icon"></i>
-                            </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.instagram.com/" class="social">
-                                    <i class="bi bi-instagram social-link-icon"></i>
-                                </a>
-                            </li>
+                            
                         </ul>
                     </div>
             </div>
