--- a/index.html
+++ b/index.html
@@ -262,6 +262,23 @@
                         <a href="https://www.instagram.com/" class="social">
                             <i class="bi bi-instagram social-link-icon"></i>
                         </a>
+                        <!-- <ul class="">
+                            <li class="nav-item">
+                                <a class="nav-link" href="http://twitter.com/" class="social">
+                                    <i class="bi bi-twitter social-link-icon"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://www.facebook.com/" class="social">
+                                    <i class="bi bi-facebook social-link-icon"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://www.instagram.com/" class="social">
+                                    <i class="bi bi-instagram social-link-icon"></i>
+                                </a>
+                            </li>
+                        </ul> -->
                     </div>
 
                 </div>
