--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <h5>Address</h5>
                         <p>
                             Rondo Women's Development Organization <br>
-                            Ntauna Village -Lindi Rural <br>
+                            <b>Ntauna Village -Lindi Rural</b> <br>
                             Lindi Region<br>
                         </p>
 
