--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <a class="nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Projects</a>
