--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
                     <div class="collapse navbar-collapse ml-auto" id="collapsibleNavId">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0 text-end">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#" aria-current="page">About Us <span class="visually-hidden">(current)</span></a>
+                                <a class="nav-link active" href="#" aria-current="page">About <span class="visually-hidden">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Projects</a>
