--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
                 <div class="page-top pb-3">
                     <h4 class="section-title">Rondo Women's Development Organization</h4>
                     <span class="page-subtitle" id="small-title">
-                        <i class="bi bi-house-fill"></i>
-                        &nbsp;> &nbsp;Home
+                        <i class="bi bi-info-circle-fill"></i>
+                        &nbsp;> &nbsp;About
                     </span>
                 </div>
             </div>
