page icon and  content

--- a/about.html
+++ b/about.html
@@ -75,48 +75,50 @@
         </nav>
 
         <main>
-            
-        <section class="top-homepage">
-            <div class="container">
-                <div class="page-top pb-3">
-                    <h4 class="section-title">Rondo Women's Development Organization</h4>
-                    <span class="page-subtitle" id="small-title">
-                        <i class="bi bi-info-circle-fill"></i>
-                        &nbsp;> &nbsp;About
-                    </span>
+            <!-- page icon -->
+            <section class="top-homepage">
+                <div class="container">
+                    <div class="page-top pb-3">
+                        <h4 class="section-title">Rondo Women's Development Organization</h4>
+                        <span class="page-subtitle" id="small-title">
+                            <i class="bi bi-info-circle-fill"></i>
+                            &nbsp;> &nbsp;About
+                        </span>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <!-- page contents -->
-        <section class="top-part pt-3 pb-4">
+            <!-- page contents -->
+            <section class="top-part pt-3 pb-4">
 
-            <div class="container">
-                <div class="row">
-                    <p>
-                        <div class="">
-                            <h5 class="section-title">Raise Your Helping Hand</h5>
-                            <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
-                            <br>
-                            <br>
-                        </div>
-                    </p>
+                <div class="container">
+                    <div class="row">
+                        <p>
+                            <div class="">
+                                <h5 class="section-title">ROWODO in a Glance</h5>
+                                <span>
+                                    ROWODO is Non Governmental Organization with total of 12 women members is Ntauna Villages in Lindi Rural District as its head office though is having another branch office in Lindi Municipal.  ROWODO was started in 2011 by 1 grassroots group that was involved mainly in small farming and environmental conservation.  Since its formation organization has worked to empower communities on reproductive health education to youth in schools, HIV/IDS education, environmental conservation, human rights and nutrition.  The organization is registered to carry out its activities Tanzania Mainland with registration No. 00NGO/00006923, 3rd February 2014.
+                                </span>
+                                <br>
+                                <br>
+                            </div>
+                        </p>
+                    </div>
+                    <div class="row">
+                            <div class="col-md-6 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
+                                <img src="./res/images/imgs/members.png" alt="" id="all-image" class="rounded img-fluid float-end">
+                            </div>
+                            <div class="col-md-6 col-sm-12 order-xs-first">
+                                <img src="./res/images/imgs/women.png" alt="" id="women-image" class="rounded img-fluid">
+                            </div>
+                        </p>
+                    </div>
+
+                    <button class="btn btn-outline-success" id="donate-btn">
+                        Donate
+                    </button>
                 </div>
-                <div class="row">
-                        <div class="col-md-6 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
-                            <img src="./res/images/imgs/members.png" alt="" id="all-image" class="rounded img-fluid float-end">
-                        </div>
-                        <div class="col-md-6 col-sm-12 order-xs-first">
-                            <img src="./res/images/imgs/women.png" alt="" id="women-image" class="rounded img-fluid">
-                        </div>
-                    </p>
-                </div>
-
-                <button class="btn btn-outline-success" id="donate-btn">
-                    Donate
-                </button>
-            </div>
-        </section>
+            </section>
 
 
             <section class="top-part pt-4 pb-4">
