--- a/about.html
+++ b/about.html
@@ -97,7 +97,18 @@
                             <div class="">
                                 <h5 class="section-title">ROWODO in a Glance</h5>
                                 <span>
-                                    ROWODO is Non Governmental Organization with total of 12 women members is Ntauna Villages in Lindi Rural District as its head office though is having another branch office in Lindi Municipal.  ROWODO was started in 2011 by 1 grassroots group that was involved mainly in small farming and environmental conservation.  Since its formation organization has worked to empower communities on reproductive health education to youth in schools, HIV/IDS education, environmental conservation, human rights and nutrition.  The organization is registered to carry out its activities Tanzania Mainland with registration No. 00NGO/00006923, 3rd February 2014.
+                                    ROWODO is Non Governmental Organization with total of 12 women members is Ntauna Villages in
+                                    Lindi Rural District as its head office though is having another branch office in Lindi Municipal.
+                                    ROWODO was started in 2011 by 1 grassroots group that was involved mainly in small farming and
+                                    environmental conservation.  
+                                    <br>
+                                    <br>
+                                    Since its formation organization has worked to empower communities
+                                    on reproductive health education to youth in schools, HIV/IDS education, environmental
+                                    conservation, human rights and nutrition. 
+                                    <br>
+                                    The organization is registered to carry out its
+                                    activities Tanzania Mainland with registration No. 00NGO/00006923, 3rd February 2014.
                                 </span>
                                 <br>
                                 <br>
