--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
 
             <section class="top-part pt-4 pb-4">
                 <div class="container">
-                    <h5 class="section-title text-center">How You Can Help</h5>
+                    <h5 class="section-title text-center">Our Values</h5>
                     <p>
                         <div class="row">
                             <div class="col-md-4">
