--- a/about.html
+++ b/about.html
@@ -139,9 +139,9 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <i class="bi bi-coin how-icons"></i>
-                                <h5 class="sub-sections-header">Send Donations</h5>
+                                <h5 class="sub-sections-header">Our Vision</h5>
                                 <p>
-                                    By using our bank accounts you can donate to help the Tanzania community. You can also make contact before donating.
+                                    Having society with a good prosperity and equal rights for all social classes as well as poverty reduction.
                                 </p>
                             </div>
 
