--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                     <p>
                         <div class="row">
                             <div class="col-md-4">
-                                <i class="bi bi-coin how-icons"></i>
+                                <i class="bi bi-coin value-icons"></i>
                                 <h5 class="sub-sections-header">Our Vision</h5>
                                 <p>
                                     Having society with a good prosperity and equal rights for all social classes as well as poverty reduction.
@@ -146,7 +146,7 @@
                             </div>
 
                             <div class="col-md-4">
-                                <i class="bi bi-heart-fill how-icons"></i>
+                                <i class="bi bi-heart-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Become a Volunteer</h5>
                                 <p>
                                     You can get involved today by becoming a Volunteer. Sign up and you will be joining a group of change-makers, a network strong enough to impact positive change.
