--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
 
                             <div class="col-md-4">
                                 <i class="bi bi-heart-fill value-icons"></i>
-                                <h5 class="sub-sections-header">Become a Volunteer</h5>
+                                <h5 class="sub-sections-header">Our Mission</h5>
                                 <p>
                                     You can get involved today by becoming a Volunteer. Sign up and you will be joining a group of change-makers, a network strong enough to impact positive change.
                                 </p>
