--- a/about.html
+++ b/about.html
@@ -145,22 +145,22 @@
                                 </p>
                             </div>
 
-                            <div class="col-md-4">
+                            <div class="col-md-8">
                                 <i class="bi bi-heart-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Our Mission</h5>
                                 <p>
-                                    You can get involved today by becoming a Volunteer. Sign up and you will be joining a group of change-makers, a network strong enough to impact positive change.
+                                    To develop and enhance society economically, to advocate rights of youth, children  and women group:  such as provision of legal aids, reproductive health education to youth in school, HIV/AIDS education, environmental conservation, Human rights and Nutrition.
                                 </p>
                             </div>
 
 
-                            <div class="col-md-4">
+                            <!-- <div class="col-md-4">
                                 <i class="bi bi-balloon-heart-fill how-icons"></i>
                                 <h5 class="sub-sections-header">Give Scholarship</h5>
                                 <p>
                                     Your gift will help equip children in need with necessary resources, training and education while offering the promise of a brighter future. You can make a difference today by signing up.
                                 </p>
-                            </div>
+                            </div> -->
                         </div>
                     </p>
                 </div>
