--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                     <p>
                         <div class="row">
                             <div class="col-md-4">
-                                <i class="bi bi-coin value-icons"></i>
+                                <i class="bi bi-eye-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Our Vision</h5>
                                 <p>
                                     Having society with a good prosperity and equal rights for all social classes as well as poverty reduction.
