--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
                             </div>
 
                             <div class="col-md-8">
-                                <i class="bi bi-heart-fill value-icons"></i>
+                                <i class="bi bi-rocket value-icons"></i>
                                 <h5 class="sub-sections-header">Our Mission</h5>
                                 <p>
                                     To develop and enhance society economically, to advocate rights of youth, children  and women group:  such as provision of legal aids, reproductive health education to youth in school, HIV/AIDS education, environmental conservation, Human rights and Nutrition.
