--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
 
         <!-- Bootstrap icons CDN -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        
         <!-- Custom styles -->
         <link rel="stylesheet" href="./res/css/rowodo.css">
         <link rel="stylesheet" href="res/css/carousel.css">
