--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <!-- Bootstrap icons CDN -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        
+
         <!-- Custom styles -->
         <link rel="stylesheet" href="./res/css/rowodo.css">
         <link rel="stylesheet" href="res/css/carousel.css">
@@ -69,7 +69,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
-                            
                         </ul>
                     </div>
             </div>
@@ -171,8 +170,8 @@
             <!-- News section -->
             <section class="news pt-4 pb-4">
                 <div class="container">
-                    <h5 class="section-title text-center"> News </h5>
-                    <h5 class="sub-sections-header pb-2"> Recent Causes </h5>
+                    <h5 class="section-title text-center"> Achievements </h5>
+                    <h5 class="sub-sections-header pb-2"> Remarkable ROWODO Achievements </h5>
                     <div class="row">
                         <div class="col-md-4 col-sm-12 col-xs-12">
                             <div class="card">
