--- a/about.html
+++ b/about.html
@@ -172,48 +172,17 @@
                 <div class="container">
                     <h5 class="section-title text-center"> Achievements </h5>
                     <h5 class="sub-sections-header pb-2"> Remarkable ROWODO Achievements </h5>
-                    <div class="row">
-                        <div class="col-md-4 col-sm-12 col-xs-12">
-                            <div class="card">
-                                <div class="news p-3">
-                                    <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
-                                    <br>
-                                    <span class="news-info mt-4">
-                                        <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-12 col-xs-12">
-                            <div class="card">
-                                <span class="news p-3">
-                                    <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
-                                    <br>
-                                    <span class="news-info">
-                                        <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
-                                    </span>
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col- col-sm-12 col-xs-12">
-                            <div class="card">
-                                <span class="news p-3">
-                                    <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
-                                    <br>
-                                    <span class="news-info">
-                                        <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
-                                    </span>
-                                </span>
-                            </div>
-                        </div>
-
-
+                    <div class="">
+                        <ul class="container">
+                            <li>
+                                The organization has participated in commemoration of world breast
+                                feeding week sponsored by Save the Children international in Lindi and
+                                Ruangwa districts in 2015 national campaign.
+                            </li>
+                        </ul>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
 
         <div class="partners pt-4 pb-4 mb-3">
