--- a/about.html
+++ b/about.html
@@ -179,6 +179,9 @@
                                 feeding week sponsored by Save the Children international in Lindi and
                                 Ruangwa districts in 2015 national campaign.
                             </li>
+                            <li>
+                                Cooperating with partners including government and other NGOs in various events.
+                            </li>
                         </ul>
                     </div>
                 </div>
