--- a/about.html
+++ b/about.html
@@ -182,6 +182,10 @@
                             <li>
                                 Cooperating with partners including government and other NGOs in various events.
                             </li>
+                            <li>
+                                Organization has successes in mobilizing communities on environment
+                                conservation and friendly farming system.
+.                            </li>
                         </ul>
                     </div>
                 </div>
