--- a/about.html
+++ b/about.html
@@ -185,7 +185,14 @@
                             <li>
                                 Organization has successes in mobilizing communities on environment
                                 conservation and friendly farming system.
-.                            </li>
+                            </li>
+                            <li>
+                                Participated in mobilizing in “Binti Lindi campaign” with the purpose of
+                                influencing and motivating girls to put efforts in studies.
+                            </li>
+                            <li>
+                                Have mobilized community on HIV AIDS education.
+                            </li>
                         </ul>
                     </div>
                 </div>
