--- a/about.html
+++ b/about.html
@@ -175,8 +175,8 @@
                     <div class="">
                         <ul class="container">
                             <li>
-                                The organization has participated in commemoration of world breast
-                                feeding week sponsored by Save the Children international in Lindi and
+                                The organization has participated in commemoration of World Breast
+                                Feeding week sponsored by Save the Children International in Lindi and
                                 Ruangwa districts in 2015 national campaign.
                             </li>
                             <li>
