community service images

--- a/about.html
+++ b/about.html
@@ -117,10 +117,10 @@
                     </div>
                     <div class="row">
                             <div class="col-md-6 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
-                                <img src="./res/images/imgs/members.png" alt="" id="all-image" class="rounded img-fluid float-end">
+                                <img src="./res/images/imgs/education.png" alt="" id="all-image" class="rounded img-fluid float-end">
                             </div>
                             <div class="col-md-6 col-sm-12 order-xs-first">
-                                <img src="./res/images/imgs/women.png" alt="" id="women-image" class="rounded img-fluid">
+                                <img src="./res/images/imgs/community-education.png" alt="" id="women-image" class="rounded img-fluid">
                             </div>
                         </p>
                     </div>
