donate button removed

--- a/about.html
+++ b/about.html
@@ -125,9 +125,9 @@
                         </p>
                     </div>
 
-                    <button class="btn btn-outline-success" id="donate-btn">
+                    <!-- <button class="btn btn-outline-success" id="donate-btn">
                         Donate
-                    </button>
+                    </button> -->
                 </div>
             </section>
 
