--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <title>
-            Home | Rondo Women's Development Organization (ROWODO)
+            Projects | Rondo Women's Development Organization (ROWODO)
         </title>
 
         <!-- Bootstrap CSS CDN -->
