--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                 <div class="page-top pb-3">
                     <h4 class="section-title">Rondo Women's Development Organization</h4>
                     <span class="page-subtitle" id="small-title">
-                        <i class="bi bi-house-fill"></i>
+                        <i class="bi bi-bar-chart-steps"></i>
                         &nbsp;> &nbsp;Projects
                     </span>
                 </div>
@@ -93,22 +93,32 @@
                 <div class="row">
                     <p>
                         <div class="">
-                            <h5 class="section-title">Raise Your Helping Hand</h5>
-                            <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
+                            <h5 class="section-title">Ongoing Projects</h5>
+                            <span>
+                                We work on different projects to empower individuals and communities to take control of their own futures and create sustainable change that benefits everyone.
+                                <br>
+                                <b>Let's build our country together.</b>
+                            </span>
                             <br>
                             <br>
                         </div>
                     </p>
                 </div>
-                <div class="row">
-                        <div class="col-md-6 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
+                <!-- <div class="row">
+                        <div class="col-md-3 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
                             <img src="./res/images/imgs/members.png" alt="" id="all-image" class="rounded img-fluid float-end">
                         </div>
-                        <div class="col-md-6 col-sm-12 order-xs-first">
+                        <div class="col-md-3 col-sm-12 order-xs-first">
+                            <img src="./res/images/imgs/women.png" alt="" id="women-image" class="rounded img-fluid">
+                        </div>
+                        <div class="col-md-3 col-sm-12 pb-sm-3 pb-xs-3 order-xs-second">
+                            <img src="./res/images/imgs/members.png" alt="" id="all-image" class="rounded img-fluid float-end">
+                        </div>
+                        <div class="col-md-3 col-sm-12 order-xs-first">
                             <img src="./res/images/imgs/women.png" alt="" id="women-image" class="rounded img-fluid">
                         </div>
                     </p>
-                </div>
+                </div> -->
 
                 <button class="btn btn-outline-success" id="donate-btn">
                     Donate
