--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
                 <div class="row">
                     <p>
                         <div class="">
-                            <h5 class="section-title">Ongoing Projects</h5>
+                            <h5 class="section-title">Our Projects</h5>
                             <span>
                                 We work on different projects to empower individuals and communities to take control of their own futures and create sustainable change that benefits everyone.
                                 <br>
@@ -129,7 +129,7 @@
 
             <section class="top-part pt-4 pb-4">
                 <div class="container">
-                    <h5 class="section-title text-center">How You Can Help</h5>
+                    <h5 class="section-title text-center">Ongoing Projects</h5>
                     <p>
                         <div class="row">
                             <div class="col-md-4">
