--- a/projects.html
+++ b/projects.html
@@ -133,33 +133,39 @@
                     <p>
                         <div class="row">
                             <div class="col-md-4">
-                                <i class="bi bi-coin how-icons"></i>
-                                <h5 class="sub-sections-header">Mradi wa Jinsia</h5>
+                                <i class="bi bi-heart how-icons"></i>
+                                <h5 class="sub-sections-header">#1 Mradi wa Jinsia</h5>
                                 <p>
                                     <i class="bi bi-coin"></i> &nbsp; Mfadhili <br>
                                     Swissaid Tanzania.<br>
+                                </p>
+                                <p>
                                     <i class="bi bi-compass"></i> &nbsp; Sehemu za utekelezaji<br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
                             </div>
 
                             <div class="col-md-4">
-                                <i class="bi bi-coin how-icons"></i>
-                                <h5 class="sub-sections-header">Mradi wa Jinsia</h5>
+                                <i class="bi bi-bounding-box how-icons"></i>
+                                <h5 class="sub-sections-header">#2 Mradi wa Jinsia</h5>
                                 <p>
                                     <i class="bi bi-coin"></i> &nbsp; Mfadhili <br>
                                     Swissaid Tanzania.<br>
+                                </p>
+                                <p></p>
                                     <i class="bi bi-compass"></i> &nbsp; Sehemu za utekelezaji<br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
                             </div>
 
                             <div class="col-md-4">
-                                <i class="bi bi-coin how-icons"></i>
-                                <h5 class="sub-sections-header">Mradi wa Jinsia</h5>
+                                <i class="bi bi-bounding-box-circles how-icons"></i>
+                                <h5 class="sub-sections-header">#3 Mradi wa Jinsia</h5>
                                 <p>
                                     <i class="bi bi-coin"></i> &nbsp; Mfadhili <br>
                                     Swissaid Tanzania.<br>
+                                </p>
+                                <p>
                                     <i class="bi bi-compass"></i> &nbsp; Sehemu za utekelezaji<br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
