project info titles

--- a/projects.html
+++ b/projects.html
@@ -136,11 +136,11 @@
                                 <i class="bi bi-heart how-icons"></i>
                                 <h5 class="sub-sections-header">#1 Mradi wa Jinsia</h5>
                                 <p>
-                                    <i class="bi bi-coin"></i> &nbsp; Mfadhili <br>
+                                    <i class="bi bi-coin"></i> &nbsp; <b> Mfadhili </b><br>
                                     Swissaid Tanzania.<br>
                                 </p>
                                 <p>
-                                    <i class="bi bi-compass"></i> &nbsp; Sehemu za utekelezaji<br>
+                                    <i class="bi bi-compass"></i> &nbsp; <b> Sehemu za utekelezaji </b><br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
                             </div>
@@ -149,11 +149,11 @@
                                 <i class="bi bi-bounding-box how-icons"></i>
                                 <h5 class="sub-sections-header">#2 Mradi wa Jinsia</h5>
                                 <p>
-                                    <i class="bi bi-coin"></i> &nbsp; Mfadhili <br>
+                                    <i class="bi bi-coin"></i> &nbsp; <b> Mfadhili </b><br>
                                     Swissaid Tanzania.<br>
                                 </p>
                                 <p></p>
-                                    <i class="bi bi-compass"></i> &nbsp; Sehemu za utekelezaji<br>
+                                    <i class="bi bi-compass"></i> &nbsp; <b> Sehemu za utekelezaji</b><br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
                             </div>
@@ -162,11 +162,11 @@
                                 <i class="bi bi-bounding-box-circles how-icons"></i>
                                 <h5 class="sub-sections-header">#3 Mradi wa Jinsia</h5>
                                 <p>
-                                    <i class="bi bi-coin"></i> &nbsp; Mfadhili <br>
+                                    <i class="bi bi-coin"></i> &nbsp;<b> Mfadhili </b><br>
                                     Swissaid Tanzania.<br>
                                 </p>
                                 <p>
-                                    <i class="bi bi-compass"></i> &nbsp; Sehemu za utekelezaji<br>
+                                    <i class="bi bi-compass"></i> &nbsp; <b> Sehemu za utekelezaji </b><br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
                             </div>
